[package]
name = "zino-benches"
version = "0.1.0"
description = "Benches for Zino"
edition = "2024"
license = "MIT"

[dependencies]
base64 = "0.22.1"
serde_json = "1.0.139"
sha2 = "0.10.8"
smallvec = "1.14.0"
uuid = "1.13.2"
zino-core = "0.32.1"

[dev-dependencies]
anyhow = "1.0.95"
arrayvec = "0.7.6"
base64-simd = "0.8.0"
criterion = "0.5.1"
data-encoding = "2.8.0"
indexmap = "2.7.1"
libsm = "0.6.0"
ryu = "1.0.19"
sm3 = "0.4.2"
sonic-rs = "0.3.17"
tinyvec = { version = "1.8.1", features = ["alloc"] }
uuid-simd = "0.8.0"

[[bench]]
name = "criterion_main"
harness = false
